--- a/education/1/index.html
+++ b/education/1/index.html
@@ -81,7 +81,7 @@
             <div class="mt-6 max-w-2xl mx-auto">
                 <p class="text-center text-sm opacity-90 mb-2"><i class="fas fa-headphones-alt mr-2"></i>본문을 음성으로 듣기</p>
                 <audio controls class="w-full rounded-lg">
-                    <source src="https://drive.google.com/uc?export=download&id=1M1Sd1-_T1YaqEWxM8I57ZU9e-ai8UPXX" type="audio/mpeg">
+                    <source src="https://raw.githubusercontent.com/aitravlelab/education/main/1/내일투어 AI 트래블 랩_AI 실무 활용 교육_1강 LLM(대형언어모델)의 원리와 한계.mp3" type="audio/mpeg">
                     브라우저가 오디오 태그를 지원하지 않습니다.
                 </audio>
             </div>
