--- a/education/1/index.html
+++ b/education/1/index.html
@@ -79,9 +79,9 @@
             </div>
 
             <div class="mt-6 max-w-2xl mx-auto">
-                <p class="text-center text-sm opacity-90 mb-2"><i class="fas fa-headphones-alt mr-2"></i>팟케스트 오디오 듣기</p>
+                <p class="text-center text-sm opacity-90 mb-2"><i class="fas fa-headphones-alt mr-2"></i>오디오 듣기</p>
                 <audio controls class="w-full rounded-lg">
-                    <source src="https://raw.githubusercontent.com/aitravlelab/education/1/내일투어 AI 트래블 랩_AI 실무 활용 교육_1강 LLM(대형언어모델)의 원리와 한계.mp3" type="audio/mpeg">
+                    <source src="내일투어 AI 트래블 랩_AI 실무 활용 교육_1강 LLM(대형언어모델)의 원리와 한계.mp3" type="audio/mpeg">
                     브라우저가 오디오 태그를 지원하지 않습니다.
                 </audio>
             </div>
