--- a/education/2/index.html
+++ b/education/2/index.html
@@ -70,7 +70,7 @@
 
             <div class="mt-6">
                 <audio controls>
-                    <source src="audio2.wav" type="audio/wav">
+                    <source src="audio 2.mp3" type="audio/mpeg">
                     브라우저가 오디오 태그를 지원하지 않습니다.
                 </audio>
             </div>
