--- a/education/1/index.html
+++ b/education/1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LLM 실무 활용 핸드북</title>
+    <title>AI 실무 활용 교육</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -71,8 +71,8 @@
                 <div class="icon-circle bg-white bg-opacity-20 mb-4">
                     <i class="fas fa-robot text-3xl text-white"></i>
                 </div>
-                <h1 class="text-3xl font-bold mb-2">LLM 실무 활용 핸드북</h1>
-                <p class="text-lg opacity-90">대형 언어 모델의 원리와 실무 활용법</p>
+                <h1 class="text-3xl font-bold mb-2">AI 실무 활용 교육</h1>
+                <p class="text-lg opacity-90">LLM(대형언어모델)의 원리와 한계</p>
                 <div class="mt-4 text-sm opacity-80">
                     <i class="fas fa-calendar-alt mr-2"></i>작성일: 2025년 7월 4일
                 </div>
