--- a/education/2/index.html
+++ b/education/2/index.html
@@ -64,9 +64,9 @@
         <div class="max-w-4xl mx-auto text-center">
             <h1 class="text-3xl md:text-4xl font-bold mb-4">
                 <i class="fas fa-brain mr-3"></i>
-                GPT 모델 선택 및 활용법 핸드북
+                AI 실무 활용 교육
             </h1>
-            <p class="text-lg opacity-90">AI의 '뇌' 이해부터 실무 활용까지</p>
+            <p class="text-lg opacity-90">GPT 활용 심화: 모델설정, 프로젝트, GPTS 활용</p>
 
             <div class="mt-6">
                 <audio controls>
