--- a/education/3/index.html
+++ b/education/3/index.html
@@ -45,6 +45,14 @@
                 LLM 2단계 프롬프트 활용 전략 핸드북
             </h1>
             <p class="text-lg opacity-90">복잡한 AI 작업을 효율적으로 관리하는 체계적 방법론</p>
+
+            <div class="mt-6">
+                <audio controls>
+                    <source src="https://github.com/KAIONAKIAK/aitravelab/raw/main/education/3/audio%203.MP3" type="audio/mpeg">
+                    브라우저가 오디오 태그를 지원하지 않습니다.
+                </audio>
+            </div>
+
             <div class="mt-4 text-sm opacity-75">
                 <i class="fas fa-calendar-alt mr-2"></i>
                 작성일: 2025년 7월 11일
