--- a/education/3/index.html
+++ b/education/3/index.html
@@ -48,7 +48,7 @@
 
             <div class="mt-6">
                 <audio controls>
-                    <source src="https://github.com/KAIONAKIAK/aitravelab/raw/main/education/3/audio%203.MP3" type="audio/mpeg">
+                    <source src="https://kaknakiak.github.io/aitravlelab/education/3/audio 3.MP3" type="audio/mpeg">
                     브라우저가 오디오 태그를 지원하지 않습니다.
                 </audio>
             </div>
